--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Parth</title>
 </head>
 <body>
-    <h1>Hello world, This is kishan</h1>
+    <h1>Hello navsari, this is kishan</h1>
 </body>
 </html>
